--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     },
     "autoload": {
         "psr-4": {
-            "app\\": "",
-            "": "src/"
+            "app\\": ""
         }
     }
 }
